# bankbulls

./: 2bankbull_test.sh  3.sh  4.sh  CMakeLists.txt  Makefile  README.md  bankbull_test.sh  index.js  test.sh
bankbulls/: bankbulls.abi  bankbulls.wasm
dev/: Makefile  test.sh_bak
dev/bankbulls/: bankbulls.abi  bankbulls.wasm
include/: bankbulls.hpp  bankbulls_utils.hpp  log.hpp  models.hpp  type.hpp  utils.hpp
include/nlohmann/: json.hpp
local/: Makefile  test.sh
local/bankbulls/: bankbulls.abi  bankbulls.wasm
src/: bankbulls.cpp
